2010-05-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/HelperMethods.cs:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodDialog.cs:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
	  Worked on new member positioning.

2010-05-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/HelperMethods.cs:
	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodDialog.cs:
	* MonoDevelop.Refactoring.ConvertPropery/CreateBackingStore.cs:
	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Worked on refactoring.

2010-05-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  Fixed 'Bug 609221 - Refactor->"Create Method" does not infer
	  type for parameter from LINQ query'.

2010-05-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  handle null obj.

2010-05-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ConvertPropery/CreateBackingStore.cs:
	  Fixed 'Bug 609278 - Add backing store doesn't remove
	  namespace from backing field'.

2010-05-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  Fixed 'Bug 558372 - Code parser is interpreting classname as
	  method name'.

2010-05-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs: Use
	  ShowCustomDialog (which destroys the dialog when done)
	  instead of RunCustomDialog (which doesn't).

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.Refactoring.Rename/RenameItemDialog.cs:
	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs:
	* gtk-gui/MonoDevelop.Refactoring.EncapsulateFieldDialog.cs:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodDialog.cs:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs: